[project]
name = "tomato-leaf-disease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy<2",
    "opencv-python",
    "streamlit>=1.41.1",
]

[project.scripts]
start = "src.tld.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

